# mapping-for-godot

./: .gitignore  README.md  icon.svg.import  main.tscn  project.godot
OpenGL/src/: strasse.cpp  strasse.pro
blender-models/: pillar.blend1  pillars_scene.blend  pillars_scene.blend.import  pillars_scene.blend1
organization/agendas/: 05.12.24  28-11-24.txt
organization/protocols/: 28.10.24  Protokoll 02.11.24  Protokoll 10.10  Protokoll 14.11.24  Protokoll 17.10.25
prototyping/godot/: camera.gd  main.tscn
prototyping/godot/blender-models/: pillars_scene.blend  pillars_scene.blend1
src/deliverable/: README.md
src/deliverable/lumina-pax/: README.md  project.godot
src/deliverable/lumina-pax/audio/: 004 Opening 4.wav.import
src/deliverable/lumina-pax/audio/music/: 001 Opening 1.wav.import  002 Opening 2.wav.import  003 Opening 3.wav.import  004 Opening 4.wav.import  005 Lovestory 1.wav.import
src/deliverable/lumina-pax/audio/soundeffects/: Blue Flash - 1.wav.import  Blue Flash.wav.import  Papier-Streicheln.mp3.import  Wall Flash.wav.import
src/deliverable/lumina-pax/brick_wall/: bricks.gd
src/deliverable/lumina-pax/characters/: pigeon.gd
src/deliverable/lumina-pax/objects/: branch_falling.glb  branch_falling.glb.import  pigeon_folding_branch.glb.import  pigeon_folding_heart.glb  pigeon_folding_heart.glb.import  pigeon_folding_new.glb.import  pigeon_folding_pidgeon.glb.import  pinboard3_with_notes.glb.import  pinboard3_with_notes_0001.png.import  pinboard3_with_notes_0001_3.png.import  pinboard3_with_notes_0001_4.png.import  pinboard3_with_notes_Cork004_4K-JPG_Color.jpg.import  pinboard3_with_notes_Wood021_4K-JPG_Color.jpg.import  pinboard_with_notes_darker.glb.import  pinboard_with_notes_darker_0001.png.import  pinboard_with_notes_darker_0001_3.png.import  pinboard_with_notes_darker_0001_4.png.import  pinboard_with_notes_darker_Cork004_4K-JPG_Color.jpg.import  pinboard_with_notes_darker_Wood021_4K-JPG_Color.jpg.import  silhuetteNUE GROUPED.png.import
src/deliverable/lumina-pax/objects/textures/: Cork004_4K-JPG_Color.jpg.import  Untitled.002.png.import  Untitled.005.png.import  Wood021_4K-JPG_Color.jpg.import
src/deliverable/lumina-pax/scenes/: action_pigeons.tscn  branch_falling.tscn  folding.gdshader  light_controller.tscn  more_pigeons.tscn  pigeons.tscn
src/deliverable/lumina-pax/scenes/denis-tmp/: testPath.gd  test_path_follow_3d.gd  turtrel_pigeon_path.tscn
src/deliverable/lumina-pax/scripts/: branch_drawing.gd  branch_folding.gd  camera_3d.gd  distortion_grid.gd  fade_controller.gd  fade_in_controller.gd  fade_out_controler.gd  flash-omni.gd  flash_controller.gd  light_controller.gd  main_controller.gd  more_pigeons.gd  particle_controller.gd  path_follow_3d.gd  pigeon-controller.gd  pigeon_folding.gd  pigeon_folding_branch.gd  pigeon_folding_heart.gd  pigeon_folding_new.gd  pigeon_folding_pidgeon.gd  pigeon_picking.gd  pinboard.gd  pinboard_3_with_notes.gd  pinboard_with_notes_darker.gd  plane.gd  shock_wave.gd  simple-path-follow.gd  simple_pigeons.gd  skyline.gd  turtrel_pigeon_controller.gd  turtrel_pigeon_exit_path_follow_3d.gd  wall__idle_wave_controller.gd  wall__opening_controller.gd
src/deliverable/lumina-pax/shaders/: brightnessCorrection.gdshader  pigeon.gdshader  shock_wave.gdshader
src/deliverable/lumina-pax/textures/: WhiteHeart.png.import  shades_of_gray.png.import
src/deliverable/lumina-pax/textures/herz_animation_dunkler/: 0001.png.import  0002.png.import  0003.png.import  0004.png.import  0005.png.import  0006.png.import  0007.png.import  0008.png.import  0009.png.import  0010.png.import  0011.png.import  0012.png.import  0013.png.import  0014.png.import  0015.png.import  0016.png.import  0017.png.import  0018.png.import  0019.png.import  0020.png.import  0021.png.import  0022.png.import  0023.png.import  0024.png.import  0025.png.import  0026.png.import  0027.png.import  0028.png.import  0029.png.import  0030.png.import  0031.png.import  0032.png.import  0033.png.import  0034.png.import  0035.png.import  0036.png.import  0037.png.import  0038.png.import  0039.png.import  0040.png.import  (+49 more)
src/deliverable/lumina-pax/textures/herz_animation_neu/: 0001.png.import  0002.png.import  0003.png.import  0004.png.import  0005.png.import  0006.png.import  0007.png.import  0008.png.import  0009.png.import  0010.png.import  0011.png.import  0012.png.import  0013.png.import  0014.png.import  0015.png.import  0016.png.import  0017.png.import  0018.png.import  0019.png.import  0020.png.import  0021.png.import  0022.png.import  0023.png.import  0024.png.import  0025.png.import  0026.png.import  0027.png.import  0028.png.import  0029.png.import  0030.png.import  0031.png.import  0032.png.import  0033.png.import  0034.png.import  0035.png.import  0036.png.import  0037.png.import  0038.png.import  0039.png.import  0040.png.import  (+49 more)
src/prototyping/OpenGL/src/: CMakeLists.txt  strasse.cpp
src/prototyping/godot/: animatable_body_3d.gd  cubes_scene.gd  cubes_scene.tscn  human-animation.blend.import  human_animation.gd  human_animation.tscn  main.gd  main.tscn  pillars_scene.tscn  project.godot  suzanne.gd
src/prototyping/godot/blender-models/: branch.blend  branch__drawing_animation.blend  branch_falling.blend  branch_slow_movement.blend  cubes-scene.blend  cubes-scene.blend.import  cubes-scene.blend1  heart_drawing_animation.blend  heart_drawing_animation.blend1  human-animation.blend.import  human-animation.glb  human-animation.glb.import  ivy_wall.blend.import  morePigeons.blend  morePigeons.blend1  pigeon_drawing_animation1.blend  pigeon_drawing_animation1.blend1  pigeon_flying_and_picking.blend  pigeon_folding.blend  pigeon_picking.blend  pillars_scene.blend  pillars_scene.blend1  pinboard.blend
src/prototyping/godot/brightness-correction/: icon.svg.import  project.godot
src/prototyping/godot/early-experiments/: camera.gd  project.godot
src/prototyping/godot/rock-cellars-test-scene/: README.md  branch_falling_edit.tscn  icon.svg.import  pigeon.blend1  project.godot
src/prototyping/godot/viewport-mapping/: README.md
(+334 files in other folders)
